# qt-maplibre-offline

./: .gitignore  CMakeLists.txt  LINUX_SETUP.md  README.md  main.cpp
qml/: main.qml
scripts/: build_maplibre_qt.ps1  build_maplibre_qt.sh  download_tiles.py  serve_local.py
src/: pmtiles_reader.cpp  pmtiles_reader.h  tile_server.cpp  tile_server.h
tiles/: vector-dark-style.json  vector-style.json
yocto/: README.md
yocto/meta-poc-map/conf/: layer.conf
